--- a/res/xml/bootleg_dumpster_animations.xml
+++ b/res/xml/bootleg_dumpster_animations.xml
@@ -44,6 +44,13 @@
         android:title="@string/animations_ui_system"
         android:key="anim_system_stuff">
 
+    <ListPreference
+        android:key="toast_animation"
+        android:title="@string/toast_animation_title"
+        android:entries="@array/toast_animation_entries"
+        android:entryValues="@array/toast_animation_values"
+        android:persistent="false" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
