Add membar to recents options [2/2]
Change-Id: I31704d3ce1d0e08cb89bbfc945d7773393c491e8
Signed-off-by: Shubham Singh <coolsks94@gmail.com>

--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -1341,4 +1341,8 @@
     <string name="recents_clear_all_location_bottom_left">Bottom left</string>
     <string name="recents_clear_all_location_bottom_center">Bottom center</string>
 
+    <!-- Recents membar -->
+    <string name="recents_show_membar_title">Memory bar</string>
+    <string name="recents_show_membar_summary">Show a bar with the device\'s available memory</string>
+
 </resources>
