--- a/res/xml/bootleg_dumpster_recents.xml
+++ b/res/xml/bootleg_dumpster_recents.xml
@@ -49,6 +49,12 @@
         android:defaultValue="5"
         android:dependency="show_clear_all_recents" />
 
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+         android:key="systemui_recents_mem_display"
+         android:title="@string/recents_show_membar_title"
+         android:summary="@string/recents_show_membar_summary"
+         android:defaultValue="false" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
