Add membar to recents options [2/2]
Change-Id: I31704d3ce1d0e08cb89bbfc945d7773393c491e8
Signed-off-by: Shubham Singh <coolsks94@gmail.com>

--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -310,6 +310,9 @@
     <string name="immersive_recents_fullscreen">Fullscreen</string>
     <string name="immersive_recents_statusbar">Statusbar only</string>
     <string name="immersive_recents_navbar">Navbar only</string>
+    <!-- Membar -->
+    <string name="recents_show_membar_title">Memory bar</string>
+    <string name="recents_show_membar_summary">Show a bar with the device\'s available memory</string>
 
     <!-- Features Strings - Navbar -->
     <!-- DUI -->
