--- a/res/xml/bootleg_dumpster_recents.xml
+++ b/res/xml/bootleg_dumpster_recents.xml
@@ -50,6 +50,12 @@
         android:entryValues="@array/immersive_recents_values"
         android:persistent="false" />
 
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+         android:key="systemui_recents_mem_display"
+         android:title="@string/recents_show_membar_title"
+         android:summary="@string/recents_show_membar_summary"
+         android:defaultValue="false" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
