Add option to disable auto brightness icon in brightness slider [2/2]
Change-Id: Ied45611ca825eb430cb6107c6d3240954f2a0348
Signed-off-by: mydongistiny <jaysonedson@gmail.com>

--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -96,6 +96,8 @@
     <string name="qs_columns_portrait_title">Tiles columns on portrait</string>
     <string name="qs_columns_landscape_title">Tiles columns on landscape</string>
     <string name="qs_tile_title_visibility_title">Show tiles title</string>
+    <string name="brightness_icon_title">Brightness icon </string>
+    <string name="brightness_icon_summary">Show a brightness icon to the left of the brighness slider to adjust auto-brightness</string>
 
     <!-- Features Strings - Miscellaneous -->
     <string name="headset_title">Headset</string>
