Add ability to permanently hide apps from recents [2/3]
Change-Id: Iebde1ec33897eb07390c3a16f0abbb94c892eae6

--- a/res/xml/bootleg_dumpster_recents.xml
+++ b/res/xml/bootleg_dumpster_recents.xml
@@ -50,6 +50,15 @@
          android:summary="@string/recents_show_membar_summary"
          android:defaultValue="false" />
 
+     <PreferenceScreen
+        android:key="hide_app_from_recents"
+        android:title="@string/hide_apps_from_recents_title"
+        android:summary="@string/hide_apps_from_recents_summary" >
+             <intent android:action="android.intent.action.MAIN"
+                 android:targetPackage="com.android.settings"
+                 android:targetClass="com.bootleggers.dumpster.external.HAFRAppListActivity" />
+     </PreferenceScreen>
+
     <Preference
         android:key="recents_icon_pack"
         android:title="@string/recents_icon_pack_title"
