--- a/res/xml/bootleg_dumpster_lockscreen.xml
+++ b/res/xml/bootleg_dumpster_lockscreen.xml
@@ -23,6 +23,7 @@
         android:title="@string/double_tap_sleep_lockscreen"
         android:summary="@string/obviousum03"
         android:defaultValue="true" />
+
     <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="lockscreen_media_metadata"
         android:title="@string/media_art_title"
@@ -35,4 +36,9 @@
         android:summary="@string/lockscreen_power_menu_disabled_summary"
         android:defaultValue="true" />
 
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+        android:key="lockscreen_battery_info"
+        android:title="@string/lockscreen_battery_info_title"
+        android:summary="@string/lockscreen_battery_info_summary" 
+        android:defaultValue="true" />
 </PreferenceScreen>
