[1/2] OmniGears: add OmniJaws config
forward to service settings and icon pack
delete some old cruft

Change-Id: I026b4ee3ebec5cd1f86eca1eaa8f50c8b1b47fa1

--- a/res/xml/bootleg_dumpster_quicksettings.xml
+++ b/res/xml/bootleg_dumpster_quicksettings.xml
@@ -47,4 +47,8 @@
         android:summary="@string/brightness_icon_summary"
         android:defaultValue="true"/>
 
+        <Preference
+             android:key="qs_omnijaws"
+             android:fragment="com.bootleggers.dumpster.external.OmniJawsSettings"
+             android:title="@string/weather_title" />
 </PreferenceScreen>
