--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -104,6 +104,13 @@
     <string name="qs_tile_title_visibility_title">Show tiles title</string>
     <string name="brightness_icon_title">Brightness icon </string>
     <string name="brightness_icon_summary">Show a brightness icon to the left of the brighness slider to adjust auto-brightness</string>
+    <string name="weather_title">Weather</string>
+    <string name="weather_config_title">Service settings</string>
+    <string name="weather_config_summary"></string>
+    <string name="header_weather_title">Header view weather</string>
+    <string name="header_weather_summary">Enable notification panel header weather display</string>
+    <string name="weather_icon_pack_title">Condition icon pack</string>
+    <string name="weather_icon_pack_note">Note\u003a you can install new icon packs from play store by searching for \"Chronus icons\"</string>
 
     <!-- Features Strings - Miscellaneous -->
     <!--<string name="headset_title">Headset</string> -->
