--- a/res/xml/bootleg_dumpster_misc.xml
+++ b/res/xml/bootleg_dumpster_misc.xml
@@ -24,4 +24,10 @@
         android:summary="@string/headset_connect_player_summary"
         android:defaultValue="false" />
         
+    <ListPreference
+        android:key="headset_connect_player"
+        android:title="@string/headset_connect_player_title"
+        android:entries="@array/headset_connect_player_entries"
+        android:entryValues="@array/headset_connect_player_values" />
+        
 </PreferenceScreen>
