--- a/res/xml/bootleg_dumpster_misc.xml
+++ b/res/xml/bootleg_dumpster_misc.xml
@@ -18,10 +18,15 @@
 	android:title="@string/misc_title"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-    <com.gzr.wolvesden.preference.SystemSettingSwitchPreference
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="headset_connect_player"
         android:title="@string/headset_connect_player_title"
         android:summary="@string/headset_connect_player_summary"
         android:defaultValue="false" />
+    <Preference
+        android:key="headset_options"
+        android:title="@string/headset_title"
+        android:title="@string/bootleg_external_summary"
+        android:fragment="com.bootleggers.dumpster.external.Headset" />
 
 </PreferenceScreen>
