--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -99,6 +99,9 @@
     <string name="headset_title">Headset connection settings</string>
     <string name="toast_icon_title">App\'s icon in toast</string>
     <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
+    <string name="battery_title">Battery settings</string>
+    <string name="status_bar_battery_saver_color_title">Statusbar battery saver color</string>
+    <string name="status_bar_battery_saver_color_summary">Note: If battery saver already enabled, for new color be effective, disbale and renable battery saver!</string>
 
     <!-- Features Strings - Gestures -->
     <string name="torch_title">Torch</string>
