--- a/res/xml/bootleg_dumpster_misc.xml
+++ b/res/xml/bootleg_dumpster_misc.xml
@@ -34,5 +34,10 @@
         android:title="@string/toast_icon_title"
         android:summary="@string/toast_icon_summary"
         android:defaultValue="true" />
+        
+    <Preference
+        android:key="status_bar_battery_style"
+        android:title="@string/battery_title"
+        android:fragment="com.bootleggers.dumpster.external.LowBatteryColor" />
 
 </PreferenceScreen>
