Option to use volume keys to control media volume anytime (1/2) (#3)
Some users don't adjust ringtone volume often (e.g. only use toggle to
switch between silent and non-silent) mode. Having an option to
use the volume keys to control media volume anytime allows media
volume to be controllled/muted before entering a game or other apps
with sound in an undesirable location.

--- a/res/xml/bootleg_dumpster_button.xml
+++ b/res/xml/bootleg_dumpster_button.xml
@@ -21,11 +21,17 @@
     <PreferenceCategory
         android:key="volume_rocker_configs"
         android:title="@string/volume_rocker_title">
-            
+
         <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="swap_volume_buttons"
         android:title="@string/swap_volume_buttons"
         android:defaultValue="false" />
+
+        <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+        android:key="volume_keys_control_media_stream"
+        android:title="@string/volume_keys_control_media_stream_title"
+        android:summary="@string/volume_keys_control_media_stream_summary"
+        android:defaultValue="true" />
 
     </PreferenceCategory>
 
