--- a/res/xml/bootleg_dumpster_button.xml
+++ b/res/xml/bootleg_dumpster_button.xml
@@ -23,5 +23,9 @@
         android:title="@string/swap_volume_buttons"
         android:summary="@string/swap_volume_buttons_summary"
         android:defaultValue="false" />
-
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+        android:key="volume_keys_control_media_stream"
+        android:title="@string/volume_keys_control_media_stream_title"
+        android:summary="@string/volume_keys_control_media_stream_summary"
+        android:defaultValue="true" />
 </PreferenceScreen>
