--- a/res/xml/bootleg_dumpster_lockscreen.xml
+++ b/res/xml/bootleg_dumpster_lockscreen.xml
@@ -18,4 +18,10 @@
     android:title="@string/lockscreen_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+        android:key="double_tap_sleep_lockscreen"
+        android:title="@string/double_tap_sleep_lockscreen"
+        android:summary="@string/obviousum03"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
