--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -76,4 +76,8 @@
 
     <!-- Features Strings - Lockscreen -->
     <string name="double_tap_sleep_lockscreen">DT2S on lockscreen</string>
+
+    <!-- Features Strings - QuickSettings -->
+    <string name="status_bar_quick_qs_pulldown">Quick Pulldown</string>
+    <string name="status_bar_quick_qs_pulldown_summary">Pulldown statusbar from right side to show QS panel</string>
 </resources>
