--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -78,6 +78,9 @@
 
     <!-- Features Strings - Lockscreen -->
     <string name="double_tap_sleep_lockscreen">DT2S on lockscreen</string>
+    <!--string summary for the upper is set to a obvious one, ignoring -->
+    <string name="media_art_title">Show media cover art</string>
+    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
 
     <!-- Features Strings - QuickSettings -->
     <string name="status_bar_quick_qs_pulldown">Quick Pulldown</string>
