--- a/res/xml/bootleg_dumpster_lockscreen.xml
+++ b/res/xml/bootleg_dumpster_lockscreen.xml
@@ -23,5 +23,10 @@
         android:title="@string/double_tap_sleep_lockscreen"
         android:summary="@string/obviousum03"
         android:defaultValue="true" />
+    <com.gzr.wolvesden.preference.SystemSettingSwitchPreference
+        android:key="lockscreen_media_metadata"
+        android:title="@string/media_art_title"
+        android:summary="@string/media_art_summary"
+        android:defaultValue="true" />
 
 </PreferenceScreen>
