--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -138,6 +138,7 @@
     <string name="network_traffic_title">Network traffic</string>
     <string name="network_traffic_state_title">Show net activity in statusbar</string>
     <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
+    <string name="statusbar_items_title">Statusbar items</string> 
     
     <!-- Features Strings - Notifications -->
     <string name="light_category">Lights</string>
