--- a/res/xml/bootleg_dumpster_statusbar.xml
+++ b/res/xml/bootleg_dumpster_statusbar.xml
@@ -28,4 +28,11 @@
         android:key="network_traffic"
         android:title="@string/network_traffic_title"
         android:fragment="com.bootleggers.dumpster.external.NetworkTraffic" />
+
+    <Preference
+            android:title="@string/statusbar_items_title" >
+            <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.systemui"
+                android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
+    </Preference>
 </PreferenceScreen>
