Battery light customization [2/2]
aex edits: Add back disable battery light toggle
for obvious reason, also set other options dependencies
on it

Change-Id: I792c6428a774fb92b981e4e248d024c45acd6f4e
Signed-off-by: Shubham Singh <coolsks94@gmail.com>

--- a/res/xml/bootleg_dumpster_power.xml
+++ b/res/xml/bootleg_dumpster_power.xml
@@ -17,5 +17,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/powermenu_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+        <PreferenceCategory
+        android:key="light_category"
+        android:title="@string/light_category">
+
+     <Preference
+         android:key="battery_charging_light"
+         android:fragment="org.aospextended.extensions.BatteryLightSettings"
+         android:title="@string/battery_light_settings" />
+
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
