--- a/res/xml/bootleg_dumpster_notifications.xml
+++ b/res/xml/bootleg_dumpster_notifications.xml
@@ -18,4 +18,51 @@
 	android:title="@string/notifications_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <PreferenceCategory
+        android:key="light_category"
+        android:title="@string/light_category">
+    
+        <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+            android:key="battery_light_enabled"
+            android:title="@string/battery_light_enable"
+            android:defaultValue="true"/>
+    
+        <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+            android:key="battery_light_allow_on_dnd"
+            android:title="@string/battery_light_allow_on_dnd_title"
+            android:dependency="battery_light_enabled"
+            android:defaultValue="true" />
+    
+        <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+            android:key="battery_light_low_blinking"
+            android:title="@string/battery_light_low_blinking_title"
+            android:dependency="battery_light_enabled"
+            android:defaultValue="false" />
+    
+        <PreferenceCategory
+            android:key="battery_light_cat"
+            android:title="@string/battery_light_cat"
+            android:dependency="battery_light_enabled">
+            
+            <net.margaritov.preference.colorpicker.ColorPickerPreference
+                android:key="battery_light_low_color"
+                android:title="@string/battery_light_low_color"
+                android:defaultValue="0xFFFF0000" />
+    
+            <net.margaritov.preference.colorpicker.ColorPickerPreference
+                android:key="battery_light_medium_color"
+                android:title="@string/battery_light_medium_color"
+                android:defaultValue="0xFFFFFF00" />
+    
+            <net.margaritov.preference.colorpicker.ColorPickerPreference
+                android:key="battery_light_full_color"
+                android:title="@string/battery_light_full_color"
+                android:defaultValue="0xFF00FF00" />
+    
+            <net.margaritov.preference.colorpicker.ColorPickerPreference
+                android:key="battery_light_reallyfull_color"
+                android:title="@string/battery_light_reallyfull_color"
+                android:defaultValue="0xFF00FF00" />
+        </PreferenceCategory>
+    </PreferenceCategory>
 </PreferenceScreen>
