--- a/res/xml/bootleg_dumpster_recents.xml
+++ b/res/xml/bootleg_dumpster_recents.xml
@@ -41,6 +41,14 @@
         android:title="@string/recents_icon_pack_title"
         android:summary="@string/recents_icon_pack_summary" />
 
+    <ListPreference
+        android:key="immersive_recents"
+        android:title="@string/immersive_recents_title"
+        android:summary="@string/immersive_recents_summary"
+        android:dialogTitle="@string/immersive_recents_dialog_title"
+        android:entries="@array/immersive_recents_entries"
+        android:entryValues="@array/immersive_recents_values"
+        android:persistent="false" />
 
     </PreferenceCategory>
 
