--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -120,6 +120,9 @@
 
     <!-- Features Strings - StatusBar -->
     <string name="double_tap_sleep_gesture_title">DT2S on Statusbar</string>
+    <string name="network_traffic_title">Network traffic</string>
+    <string name="network_traffic_state_title">Show net activity in statusbar</string>
+    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
     
     <!-- Features Settings - Notifications -->
     <string name="light_category">Lights</string>
@@ -132,4 +135,5 @@
     <string name="battery_light_medium_color">Medium battery</string>
     <string name="battery_light_full_color">Almost full battery</string>
     <string name="battery_light_reallyfull_color">Full (100) battery</string>
+
 </resources>
