--- a/res/xml/bootleg_dumpster_statusbar.xml
+++ b/res/xml/bootleg_dumpster_statusbar.xml
@@ -24,4 +24,8 @@
         android:summary="@string/obviousum01"
         android:defaultValue="false" />
 
+    <Preference
+        android:key="network_traffic"
+        android:title="@string/network_traffic_title"
+        android:fragment="com.bootleggers.dumpster.external.NetworkTraffic" />
 </PreferenceScreen>
