--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -93,6 +93,7 @@
     <string name="qs_rows_landscape_title">Tiles rows on landscape</string>
     <string name="qs_columns_portrait_title">Tiles columns on portrait</string>
     <string name="qs_columns_landscape_title">Tiles columns on landscape</string>
+    <string name="qs_tile_title_visibility_title">Show tiles title</string>
 
     <!-- Features Strings - Miscellaneous -->
     <string name="headset_title">Headset</string>
