Port: Wake on plug (2/2)

--- a/res/xml/bootleg_dumpster_misc.xml
+++ b/res/xml/bootleg_dumpster_misc.xml
@@ -39,5 +39,11 @@
         android:key="status_bar_battery_style"
         android:title="@string/battery_title"
         android:fragment="com.bootleggers.dumpster.external.LowBatteryColor" />
+        
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+        android:key="wake_when_plugged_or_unplugged"
+        android:title="@string/wake_when_plugged_or_unplugged_title"
+        android:summary="@string/wake_when_plugged_or_unplugged_summary"
+        android:defaultValue="false" />
 
 </PreferenceScreen>
