--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -113,6 +113,8 @@
     <string name="battery_title">Battery settings</string>
     <string name="status_bar_battery_saver_color_title">Statusbar battery saver color</string>
     <string name="status_bar_battery_saver_color_summary">Note: If battery saver already enabled, for new color be effective, disbale and renable battery saver!</string>
+    <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
+    <string name="wake_when_plugged_or_unplugged_summary">Turn the screen on when connecting or disconnecting a power source</string>
 
     <!-- Features Strings - Gestures -->
     <string name="torch_title">Torch</string>
