--- a/res/xml/bootleg_dumpster_lockscreen.xml
+++ b/res/xml/bootleg_dumpster_lockscreen.xml
@@ -23,10 +23,16 @@
         android:title="@string/double_tap_sleep_lockscreen"
         android:summary="@string/obviousum03"
         android:defaultValue="true" />
-    <com.gzr.wolvesden.preference.SystemSettingSwitchPreference
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="lockscreen_media_metadata"
         android:title="@string/media_art_title"
         android:summary="@string/media_art_summary"
+        android:defaultValue="true" />
+
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+        android:key="lockscreen_power_menu_disabled"
+        android:title="@string/lockscreen_power_menu_disabled_title"
+        android:summary="@string/lockscreen_power_menu_disabled_summary"
         android:defaultValue="true" />
 
 </PreferenceScreen>
