--- a/res/values/bootleg_dimens.xml
+++ b/res/values/bootleg_dimens.xml
@@ -28,4 +28,6 @@
 
     <!-- Shortcut picker -->
     <dimen name="shortcut_picker_left_padding">70dip</dimen>
+
+    <dimen name="picker_circle_preview_size">26dp</dimen>
 </resources>
