Allow to call Notifications settings from the Dumpster

--- a/res/xml/bootleg_dumpster_notifications.xml
+++ b/res/xml/bootleg_dumpster_notifications.xml
@@ -26,7 +26,10 @@
              android:key="battery_charging_light"
              android:fragment="com.bootleggers.dumpster.external.LedSettings"
              android:title="@string/battery_light_settings" />
-
+    <Preference
+            android:key="notification_light"
+            android:fragment="com.android.settings.applications.NotificationApps"
+            android:title="@string/notification_light_settings" />
     </PreferenceCategory>
 
 </PreferenceScreen>
