Extensions: Launch Statusbar items editor
Change-Id: Iefcaa4397959315abf2538384a9ad5f1e5956c56
Signed-off-by: Shubham Singh <coolsks94@gmail.com>

--- a/res/xml/bootleg_dumpster_statusbar.xml
+++ b/res/xml/bootleg_dumpster_statusbar.xml
@@ -17,5 +17,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/statusbar_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+     
+     <Preference
+       android:key="systemui_tuner_statusbar"
+       android:title="@string/statusbar_title"
+       android:icon="@drawable/ic_systemui_tuner_statusbaritems" >
+       <intent android:action="android.intent.action.MAIN"
+           android:targetPackage="com.android.systemui"
+           android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
+    </Preference>
 
 </PreferenceScreen>
