--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -134,7 +134,7 @@
     <string name="network_traffic_state_title">Show net activity in statusbar</string>
     <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
     
-    <!-- Features Settings - Notifications -->
+    <!-- Features Strings - Notifications -->
     <string name="light_category">Lights</string>
     <string name="battery_light_settings">Battery charging light</string>
     <string name="battery_light_enable">Battery light</string>
@@ -146,4 +146,16 @@
     <string name="battery_light_full_color">Almost full battery</string>
     <string name="battery_light_reallyfull_color">Full (100) battery</string>
     <string name="notification_light_settings">Notifications light</string>
+    
+    <!-- Features Strings - Power Menu -->
+    <string name="powermenu_title">Power menu</string>
+    <string name="powermenu_screenshot">Screenshot</string>
+    <string name="powermenu_power">Power</string>
+    <string name="powermenu_restart">Restart</string>
+    <string name="powermenu_restart_recovery">Advanced restart</string>
+    <string name="powermenu_airplane">Airplane</string>
+    <string name="powermenu_settings">Settings</string>
+    <string name="powermenu_lockdown">Lock Down</string>
+    <string name="powermenu_soundpanel">Sound Panel</string>
+    <string name="powermenu_users">Users</string>
 </resources>
