--- a/res/xml/bootleg_dumpster_misc.xml
+++ b/res/xml/bootleg_dumpster_misc.xml
@@ -52,4 +52,8 @@
         android:summary="@string/vibration_on_charge_state_changed_summary"
         android:defaultValue="true" />
 
+    <Preference
+        android:title="@string/app_ops_settings"
+        android:fragment="com.android.settings.applications.AppOpsSummary"/>
+
 </PreferenceScreen>
