Option to disable music track title in QS tile [2/2]
Change-Id: I144b64457b2c0cdaabc2f1b8bdbd3d8aec076257

--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -145,6 +145,9 @@
     <!-- Small quick settings scroller -->
     <string name="qqs_scroll_title">Scroll small QS tiles</string>
     <string name="qqs_scroll_summary">Allow scrolling through the small QS tiles</string>
+    <!-- Disable music track title in QS tile -->
+    <string name="qs_music_tile_track_optional_title">Music tile track title</string>
+    <string name="qs_music_tile_track_optional_summary">Show the music track title as the QS tile title</string>
 
     <!-- Features Strings - Miscellaneous -->
     <!--<string name="headset_title">Headset</string> -->
