Dumpster: All tile scroller for quickbar settings [2/2]
Change-Id: I54bc2d390c18a55d69718733bd6d30693249a40c

--- a/res/xml/bootleg_dumpster_quicksettings.xml
+++ b/res/xml/bootleg_dumpster_quicksettings.xml
@@ -47,6 +47,12 @@
         android:summary="@string/brightness_icon_summary"
         android:defaultValue="true"/>
 
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+        android:key="qs_quickbar_scroll_enabled"
+        android:title="@string/qqs_scroll_title"
+        android:summary="@string/qqs_scroll_summary"
+        android:defaultValue="false"/>
+
         <Preference
              android:key="qs_omnijaws"
              android:fragment="com.bootleggers.dumpster.external.OmniJawsSettings"
