--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -142,6 +142,9 @@
     <string name="style_disabled_summary">Custom header image is OFF</string>
     <string name="header_provider_disabled">Disabled</string>
     <string name="custom_header_title">Custom header image</string>
+    <!-- Small quick settings scroller -->
+    <string name="qqs_scroll_title">Scroll small QS tiles</string>
+    <string name="qqs_scroll_summary">Allow scrolling through the small QS tiles</string>
 
     <!-- Features Strings - Miscellaneous -->
     <!--<string name="headset_title">Headset</string> -->
