--- a/res/xml/bootleg_dumpster_button.xml
+++ b/res/xml/bootleg_dumpster_button.xml
@@ -33,4 +33,9 @@
         android:title="@string/volume_rocker_music_controls_title"
         android:summary="@string/volume_rocker_music_controls_summary"
         android:defaultValue="true" />
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+        android:key="volume_wake_screen"
+        android:summary="@string/volume_rocker_wake_summary"
+        android:title="@string/volume_rocker_wake_title"
+        android:defaultValue="false" />
 </PreferenceScreen>
