--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -198,6 +198,8 @@
     <string name="ticker_disabled">Disabled</string>
     <string name="ticker_enabled">Notification ticker</string>
     <string name="ticker_media_enabled">Notification and music ticker</string>
+    <string name="status_bar_logo_title">Bootleg logo</string>
+    <string name="status_bar_logo_summary">Enable to show Bootleg logo on statusbar</string>
 
     <!-- Features Strings - Power Menu -->
     <string name="powermenu_optitle">Select Options</string>
