--- a/res/xml/bootleg_dumpster_notifications.xml
+++ b/res/xml/bootleg_dumpster_notifications.xml
@@ -67,5 +67,12 @@
         android:summary="@string/bootleg_external_summary"
         android:fragment="com.bootleggers.dumpster.external.HeadsUpSettings"
         android:dependency="heads_up_notifications_enabled" />
+        
+    <ListPreference
+        android:key="ticker_mode"
+        android:entries="@array/ticker_mode_entries"
+        android:entryValues="@array/ticker_mode_values"
+        android:summary="%s"
+        android:title="@string/ticker_mode_title" />
 
 </PreferenceScreen>
