Logo: Add more Logo Styles [2/2]
* This commit is rework of few commits I did in Validus Nougat.
* The logos are taken from Validus Nougat, prepared by @scoobyjenkins

--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -200,6 +200,7 @@
     <string name="ticker_media_enabled">Notification and music ticker</string>
     <string name="status_bar_logo_title">Bootleg logo</string>
     <string name="status_bar_logo_summary">Enable to show Bootleg logo on statusbar</string>
+    <string name="status_bar_logo_style_title">Bootleg logo style</string>
 
     <!-- Features Strings - Power Menu -->
     <string name="powermenu_optitle">Select Options</string>
