--- a/res/values/bootleg_arrays.xml
+++ b/res/values/bootleg_arrays.xml
@@ -1340,4 +1340,15 @@
         <item>13</item>
     </string-array>
 
+    <!-- QS Headers -->
+    <string-array name="custom_header_provider_entries" translatable="false">
+        <item>@string/daylight_header_provider_title</item>
+        <item>@string/static_header_provider_title</item>
+    </string-array>
+
+    <string-array name="custom_header_provider_values" translatable="false">
+        <item>@string/daylight_header_provider</item>
+        <item>@string/static_header_provider</item>
+    </string-array>
+
 </resources>
