--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -84,6 +84,7 @@
     <string name="double_tap_sleep_lockscreen">Double tap to sleep on lockscreen</string>
     
     <!-- Volume Rocker related strings -->
+    <string name="volume_rocker_title">Volume Keys</string>
     <string name="swap_volume_buttons">Swap volume buttons rotation based</string>
     <string name="volume_keys_control_media_stream_title">Volume keys control media volume</string>
     <string name="volume_keys_control_media_stream_summary">Volume panel will show media volume slider by default</string>
