--- a/res/xml/bootleg_dumpster_gestures.xml
+++ b/res/xml/bootleg_dumpster_gestures.xml
@@ -24,4 +24,10 @@
          android:key="gestures"
          android:fragment="com.bootleggers.dumpster.external.CarbonGesturesSettings" />
 
+    <Preference
+        android:key="gesture_anywhere"
+        android:title="@string/gesture_anywhere_title"
+        android:summary="@string/gesture_anywhere_summary"
+        android:fragment="com.bootleggers.dumpster.gestureanywhere.GestureAnywhereSettings" />
+
 </PreferenceScreen>
