--- a/res/values/bootleg_colors.xml
+++ b/res/values/bootleg_colors.xml
@@ -16,24 +16,8 @@
  -->
 
 <resources>
-    <!-- New customseekbarPreference -->
-    <dimen name="picker_circle_preview_size">26dp</dimen>
-
-    <!-- AOSP Icon pack support -->
-    <dimen name="alert_dialog_padding_material">20dp</dimen>
-
-    <!-- DUI -->
-    <!-- Navbar height -->
-    <integer name="navigation_bar_height_min_percent">65</integer>
-    <integer name="navigation_bar_height_max_percent">135</integer>
-    <integer name="navigation_bar_width_min_percent">65</integer>
-    <integer name="navigation_bar_width_max_percent">135</integer>
-
-    <!-- Shortcut picker -->
-    <dimen name="shortcut_picker_left_padding">70dip</dimen>
 
     <!-- Gesture Anywhere -->
-    <dimen name="ga_gesture_thumbnail_inset">8dip</dimen>
-    <dimen name="ga_gesture_thumbnail_size">64dip</dimen>
+    <color name="ga_gesture_color">@color/material_deep_teal_500</color>
 
 </resources>
