Fix FC on various sections
Because it as asking for dependencies in there it isn't. Because of the way i've done the menues it doesn't have the options in the same place, so dependencies fails to implement and everything crashes.

--- a/res/xml/bootleg_external_headsupsettings.xml
+++ b/res/xml/bootleg_external_headsupsettings.xml
@@ -41,8 +41,7 @@
 
     <PreferenceCategory
             android:title="@string/heads_up_blacklist_title"
-            android:key="blacklist_applications"
-            android:dependency="heads_up_notifications_enabled" >
+            android:key="blacklist_applications" >
         <Preference
             android:key="add_blacklist_packages"
             android:icon="@drawable/ic_menu_add"
